--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend-project-lvl1",
+  "name": "andreikhanaufrontend-project-lvl1",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
