--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "type": "module",
   "bin": {
     "brain-even": "src/bin/brain-even.js",
-    "brain-calc": "src/bin/brain-calc.js"
+    "brain-calc": "src/bin/brain-calc.js",
+    "brain-gcd": "src/bin/brain-gcd.js"
   },
   "repository": {
     "type": "git",
