--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "bin": {
     "brain-even": "src/bin/brain-even.js",
     "brain-calc": "src/bin/brain-calc.js",
-    "brain-gcd": "src/bin/brain-gcd.js"
+    "brain-gcd": "src/bin/brain-gcd.js",
+    "brain-progression": "src/bin/brain-progression.js"
   },
   "repository": {
     "type": "git",
