--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "brain-even": "src/bin/brain-even.js",
     "brain-calc": "src/bin/brain-calc.js",
     "brain-gcd": "src/bin/brain-gcd.js",
-    "brain-progression": "src/bin/brain-progression.js"
+    "brain-progression": "src/bin/brain-progression.js",
+    "brain-prime": "src/bin/brain-prime.js"
   },
   "repository": {
     "type": "git",
