--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,11 +1,9 @@
 env:
-  browser: true
-  es6: true
-extends: 'eslint:recommended'
-globals:
-  Atomics: readonly
-  SharedArrayBuffer: readonly
-parserOptions:
-  ecmaVersion: 2018
-  sourceType: module
-rules: {}
+  node: true
+extends:
+   - 'airbnb-base'
+rules: {
+  no-console: off,
+  import/extensions: off
+  
+}
